@@ -1,5 +1,4 @@
-%Document new drawing stuff for PDF/UA
-%Document typesetting for PDF/UA
+%Document -stretch
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
 % dotnetcpdflibmanual.pdf, jcpdflibmanual.pdf jscpdflibmanual.pdf etc.
